# hotshot-types

./: .envrc  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: audit.yml  build-and-test.yml  lint.yml
src/: consensus.rs  data.rs  error.rs  event.rs  lib.rs  message.rs  simple_vote.rs  traits.rs  utils.rs  vid.rs
src/traits/: block_storage.rs  network.rs  network.rs.rej  node_implementation.rs  storage.rs
