[package]
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Types and traits for the HotShot consesus module"
edition = "2021"
name = "hotshot-types"
readme = "../README.md"
version = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = { version = "0.4", default-features = false }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer.git", tag = "1.4.1", default-features = false, features = [
        "logging-utils",
] }
async-lock = "2.8"
async-trait = "0.1.77"
bincode = "1.3.3"
bitvec = { version = "1.0.1", default-features = false, features = [
        "alloc",
        "atomic",
        "serde",
] }
blake3 = "1.5"
commit = { git = "https://github.com/EspressoSystems/commit" }
custom_debug = "0.6"
digest = "0.10"
either = { version = "1.10", features = ["serde"] }
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.1" }
ethereum-types = { version = "0.14.1", features = ["impl-serde"] }
futures = "0.3.30"

# TODO generic-array should not be a direct dependency
# https://github.com/EspressoSystems/HotShot/issues/1850
generic-array = { version = "0.14.7", features = ["serde"] }

jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.2", features = [
        "test-srs",
] }
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.2" }
jf-utils = { git = "https://github.com/espressosystems/jellyfish", tag = "0.4.2" }
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10"
snafu = "0.7.5"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
time = "0.3.34"
tracing = "0.1.40"
typenum = "1.17.0"
derivative = "2.2.0"
displaydoc = { version = "0.2.3", default-features = false }
dyn-clone = { git = "https://github.com/dtolnay/dyn-clone", tag = "1.0.17" }
# hotshot-utils = { path = "../utils" }

[dev-dependencies]
serde_json = { version = "1.0.114" }

[features]
gpu-vid = [
    "jf-primitives/gpu-vid",
]

[target.'cfg(all(async_executor_impl = "async-std"))'.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[target.'cfg(all(async_executor_impl = "tokio"))'.dependencies]
tokio = { version = "1.36.0", features = [
        "fs",
        "io-util",
        "io-std",
        "macros",
        "net",
        "parking_lot",
        "process",
        "rt",
        "rt-multi-thread",
        "signal",
        "sync",
        "time",
        "tracing",
] }

[workspace.lints.clippy]
# warns
all = "warn"
pedantic = "warn"
missing_docs_in_private_items = "warn"
panic = "warn"
# allows
module_name_repetitions = "allow"

[workspace.lints.rust]
# warns
rust_2018_idioms = "warn"
# TODO cahnge to deny
missing_docs = "warn"
warnings = "warn"
